bug fixed: nav bar on smaller screen: the screen beneath the nav bar scrolls up to top

--- a/app/misc/static/css/sticky_style.css
+++ b/app/misc/static/css/sticky_style.css
@@ -46,9 +46,6 @@
 }
 
 @media (max-width: 600px) {
-  .container{
-    width: 89%;
-  }
   .episode__content {
     grid-template-columns: 1fr;
   }
